fixed lecture show spacing

--- a/app/assets/stylesheets/lectures.scss
+++ b/app/assets/stylesheets/lectures.scss
@@ -152,7 +152,7 @@
  
  .lecture-content-main-container {
     width: 60%;
-    margin-left: 240px;
+   //  margin-left: 240px;
  }
  
  .course-content-component {
@@ -560,4 +560,17 @@
   @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
+  }
+
+  .lecture-show-main-video-container {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+  }
+
+  .lecture-show-main-content-container {
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
   }
